--- a/3.1/focal/amd64/Dockerfile
+++ b/3.1/focal/amd64/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-focal
+FROM mcr.microsoft.com/dotnet/aspnet:3.1-focal
 
 # Install Visual Studio Snapshot Debugger prerequisites
 RUN apt-get update \
